# Proyecto_Final_PI

./: .gitignore  CMakeLists.txt  Makefile  README.md  error_codes.txt  helpers.c  helpers.h  main.c  main.h  structure_functions.puml  structure_objects.puml
DataSets/: infractionsCHI.csv  infractionsNYC.csv  ticketsCHI.csv  ticketsNYC.csv
